# sweet-cli

./: Cargo.toml  README.md
src/: error.rs  init.rs  main.rs
src/crypto/: mod.rs  password_io.rs
