[package]
name = "sweet-cli"
version = "0.1.0"
edition = "2021"
description = "Smart wallet engine CLI"
keywords = ["smart", "wallet", "engine", "smartcontracts", "defi"]
repository = "https://github.com/torcoste/sweet-cli"

[[bin]]
name = "sweet"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
dialoguer = "0.10.4"
hex = "0.4.3"
home = "0.5.5"
pathdiff = "0.2.1"
ring = "0.16.20"
zbox = { version = "0.9.2", features = ["libsodium-bundled", "storage-file"] }
